--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
+# Ignore package tarball (built via "mix hex.build").
+islands_engine-*.tar
+
 perso*
 tree*
 /log
